--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Agentcio.GitHub.io by AgentCio</title>
+    <title>AgentC</title>
   </head>
 
   <body>
@@ -18,40 +18,31 @@
       <div class="inner">
 
         <header>
-          <h1>AgentC.io</h1>
+          <h1>AgentC<span style="color:red">.</span>io</h1>
         </header>
 
         <hr>
 
         <section id="main_content">
-          <h3>
-<a id="welcome-to-agentc" class="anchor" href="#welcome-to-agentc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to AgentC.</h3>
-
-<p>AgentC is a company that: <a href="https://agentc.io/">does great things</a>.</p>
-
-<h3>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
-
-<p>
-  Phone: <a href="tel:415.937.1277">415.937.1277</a>
-  Email: <a href="mailto:contact@agentc.io">contact@agentc.io</a></p>
+          <!-- <h3> <a id="welcome-to-agentc" class="anchor" href="#welcome-to-agentc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to AgentC.</h3> -->
+          <p>AgentC is a company which does great things, but we don't brag about them<a href="apps">*</a>.</p>
+          <!-- <h3> <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3> -->
+          <p>
+            Phone: <a href="tel:415.937.1277">415.937.1277</a>
+            Email: <a href="mailto:contact@agentc.io">contact@agentc.io</a>
+          </p>
         </section>
+        <!-- <footer> </footer> -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        <footer>
-          
-        </footer>
+          ga('create', 'UA-48779663-1', 'auto');
+          ga('send', 'pageview');
 
-                  <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-48779663-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
+        </script>
       </div>
     </div>
   </body>
