--- a/apps/index.html
+++ b/apps/index.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='//fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -36,7 +36,7 @@
           <a href="https://itunes.apple.com/us/app/quake-quiz/id528670989?mt=8"><img src="../images/qq.png" class="grid-item applogo" alt="Quake Quiz logo" title="Quake Quiz" class="applogo"></a>
           <a href="https://itunes.apple.com/us/app/wander-sf/id525494731?mt=8"><img src="../images/ws.png" class="grid-item applogo" alt="WanderSF logo" title="WanderSF" class="applogo"></a>
         </section>
-        <script src="javascripts/main.js"></script>
+        <script src="/javascripts/main.js"></script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
