--- a/apps/index.html
+++ b/apps/index.html
@@ -30,13 +30,13 @@
         </section>
         <script src="/j/main.js"></script>
         <script src="/j/imagesloaded.pkgd.js"></script>
-        <script
+        <script>
         var grid = document.querySelector('.grid');
         var msnry = new Masonry( grid, {
+          // itemSelector: ".grid-item",
           percentPosition: true
         });
         imagesLoaded( grid ).on( 'progress', function() {
-          // layout Masonry after each image loads
           msnry.layout();
         });
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
