--- a/apps/index.html
+++ b/apps/index.html
@@ -28,17 +28,17 @@
           <a href="https://itunes.apple.com/us/app/quake-quiz/id528670989?mt=8"><img src="../i/qq.png" class="grid-item applogo" alt="Quake Quiz logo" title="Quake Quiz" class="applogo"></a>
           <a href="https://itunes.apple.com/us/app/wander-sf/id525494731?mt=8"><img src="../i/ws.png" class="grid-item applogo" alt="WanderSF logo" title="WanderSF" class="applogo"></a>
         </section>
-        <script src="/j/main.js"></script>
-        <script src="/j/imagesloaded.pkgd.js"></script>
+        <!-- <script src="/j/main.js"></script>
+        <script src="/j/imagesloaded.pkgd.js"></script> -->
         <script>
-        var grid = document.querySelector('.grid');
-        var msnry = new Masonry( grid, {
-          // itemSelector: ".grid-item",
-          percentPosition: true
-        });
-        imagesLoaded( grid ).on( 'progress', function() {
-          msnry.layout();
-        });
+        // var grid = document.querySelector('.grid');
+        // var msnry = new Masonry( grid, {
+        //   // itemSelector: ".grid-item",
+        //   percentPosition: true
+        // });
+        // imagesLoaded( grid ).on( 'progress', function() {
+        //   msnry.layout();
+        // });
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
