--- a/apps/index.html
+++ b/apps/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="container">
         <header>
-          <h1>AgentC<span style="color:red">.</span>io</h1>
+          <a href="/"><h1>AgentC<span class="thedot">.</span>io</h1></a>
         </header>
         <hr>
 
