--- a/404.html
+++ b/404.html
@@ -3,18 +3,16 @@ permalink: /404.html
 ---
 
 <!DOCTYPE html>
-<html>
+<html class="four">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='//fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="/s/stylesheet.css" media="screen">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Agentcio.GitHub.io by AgentCio</title>
+    <title>AgentC</title>
   </head>
 
   <body>
@@ -22,39 +20,35 @@ permalink: /404.html
       <div class="inner">
 
         <header>
-          <h1>AgentC.io</h1>
+          <a href="/"><h1>AgentC<span class="thedot">.</span>io</h1></a>
         </header>
-
         <hr>
 
         <section id="main_content">
-          <h3>
-<a id="welcome-to-agentc" class="anchor" href="#welcome-to-agentc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to AgentC.</h3>
+            <h1 class="four">404</h1>
 
-<p>Oops. Page not found.</p>
-
-<h3>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
-
-<p>
-  Phone: <a href="tel:415.937.1277">415.937.1277</a>
-  Email: <a href="mailto:contact@agentc.io">contact@agentc.io</a></p>
+          <p>Page not found.</p>
+          <h3><a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
+          <p>
+            Phone: <a href="tel:415.937.1277">415.937.1277</a>
+            Email: <a href="mailto:contact@agentc.io">contact@agentc.io</a>
+          </p>
         </section>
 
         <footer>
-          
+
         </footer>
 
-                  <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-48779663-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-48779663-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
 
       </div>
     </div>
