--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="inner">
 
         <header>
-          <h1>AgentC<span style="color:red">.</span>io</h1>
+          <a href="/"><h1>AgentC<span class="thedot">.</span>io</h1></a>
         </header>
 
         <hr>
